# TravellerSubSectorGenerator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Screen.xml
ConsoleApplication1/: .Bezirk.cpp.swp  .Bezirk.h.swp  .System.h.swp  Bezirk.cpp  Bezirk.h  Confederation.h  DetailScreen.cpp  DetailScreen.h  Dice.h  Fraction.h  Justize.h  SpacePort.h  System.cpp  System.h  SystemParser.cpp  SystemParser.hpp  TekkLvl.h  Tempreture.h  TradeNet.cpp  TradeNet.h  Xorshift.cpp  Xorshift128.h  main.cpp  stdafx.h
src/: Bezirk.cpp  Bezirk.h  DetailScreen.cpp  DetailScreen.h  Fraction.h  Justitz.cpp  Justize.h  Math.cpp  Math.hpp  SpacePort.cpp  SpacePort.h  System.cpp  System.h  SystemParser.cpp  SystemParser.hpp  TekkLvl.h  Tempreture.h  Text.cpp  Text.hpp  TradeNet.cpp  TradeNet.h  Water.h  Xorshift.cpp  main.cpp
